<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="auto_add">自动选择</string>
    <string name="locale_city">定位当前城市</string>
    <string name="head_add">手动选择</string>
    
    <string name="filter_hint">输入城市名称</string>
    
    <string name="set_city">设置城市</string>
    <string name="app_name">天气预报</string>
    
    <string name="change_city">设置城市</string>
    <string name="update_weather">更新天气</string>
    <string name="wallpaper">壁纸</string>
    
    <string name="wallpaper_text01">壁纸1</string>
    <string name="wallpaper_text02">壁纸2</string>
    <string name="wallpaper_text03">壁纸3</string>
    <string name="wallpaper_text04">壁纸4</string>
</resources>